--- a/_includes/exhibitors.html
+++ b/_includes/exhibitors.html
@@ -14,7 +14,7 @@
   <h5>Termin</h5>
   <p style="font-size: 1.2rem">
     Die PhysiKon findet 2021 wie so vieles online statt.
-    In der Woche vom 19.-23. April stellen sich jeden Tag von 16-18 Uhr zwei Unternehmen vor.
+    In der Woche vom 19. bis zum 23. April stellen sich jeden Tag von 16 bis 18 Uhr zwei Unternehmen vor.
     Wir werden dafür das Videokonferenzprogramm <b>Zoom</b> benutzen.
     Um die technische Umsetzung kümmern wir uns, Sie müssen lediglich über einen Internet-Browser verfügen.
     Die Zeiteinteilung für die einzelnen Tage wird Anfang 2021 erfolgen, wenn alle Ausstellerplätze vergeben sind.
@@ -43,14 +43,14 @@
     Die Jobbörse ist auch vor und nach der PhysiKon 2021 erreichbar.
   </p>
 
-  
+
   <h5>Ausstellergebühr</h5>
   <p style="font-size: 1.2rem">
     Der Höhe des Ausstellerbeitrags für die PhysiKon 2021 können Sie selbst bestimmen.
     Selbstverständich bekommen Sie über Ihren Beitrag eine Rechnung.
-    Alternativ können Sie auch an unseren gemeinnützigen Verein PeP et al. spenden und bekommen eine Spendenquittung.
+    Alternativ können Sie auch an unseren gemeinnützigen Verein PeP et al. e.V. spenden und bekommen eine Spendenquittung.
     Mit dem Geld, das wir mit der PhysiKon 2021 einnehmen, finanzieren wir Projekte und Stipendien für die Physikstudierenden der TU Dortmund.
-    Falls Sie sich über unsere Arbeit informieren möchten, besuchen Sie gerne die <a href="https://pep-dortmund.org/">Webseite von PeP et al.</a> 
+    Falls Sie sich über unsere Arbeit informieren möchten, besuchen Sie gerne die <a href="https://pep-dortmund.org/" target="_blank" rel="noopener noreferrer">Webseite von PeP et al.</a>
 
   </div>
 
