add Point8, change red color, small fixes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
 <div class="jumbotron jumbotron-fluid physikon-jumbotron px-3 text-white text-center">
   <img class="header-logo" src="img/logos-physikon/logo-pfeil-gruen.svg" alt="PhysiKon">
-  <h2 class="gray">19. - 23. April 2021 &ndash; TU&nbsp;Dortmund</h2>
+  <h2 class="gray">19. - 23. April 2021 &ndash; online</h2>
 </div>
 
 <header class="container-fluid masthead bg-primary text-white text-center pt-4">
