--- a/_includes/information.html
+++ b/_includes/information.html
@@ -3,9 +3,12 @@
 <div class="container text-center text-white pb-5">
 
 <!-- Information Header -->
-<h2 class="text-center text-white text-uppercase mb-0 h2-fontsize">Informationen</h2>
+<!-- <h2 class="text-center text-white text-uppercase mb-0 h2-fontsize">Informationen</h2> -->
 <hr class="star-light">
-<h2 class="text-danger">findet auf Grund der COVID-19-Pandemie digital statt</h2>
+<h2 class="text-white mb-5 "> Die PhysiKon 2021 findet digital statt!</h2>
+<br>
+<h2 class="text-white text-uppercase mb-0 h2-fontsize"> Nähere Infos gibt es in Kürze hier!</h2>
+<br>
 <br>
   <div class="row pb-5">
     <div class="col-sm">
