remove kurze vortraege

--- a/_includes/vortraege.html
+++ b/_includes/vortraege.html
@@ -2,7 +2,7 @@
   <div class="container">
   <h2 class="h2-fontsize  py-5">Was machen Physiker und Physikerinnen nach dem Studium?</h2>
   <p style="font-size: 2rem">
-  Unsere Aussteller werden diese Frage in kurzen Vorträgen beantworten!
+  Unsere Aussteller haben eine Antwort auf diese Frage!
   </p>
 </div>
 </header>
