add buttons registration

--- a/_includes/information.html
+++ b/_includes/information.html
@@ -7,13 +7,28 @@
 <hr class="star-light">
 <h2 class="text-white mb-5 "> Die PhysiKon 2021 findet digital statt!</h2>
 <br>
-<h2 class="text-white text-uppercase mb-0 h2-fontsize"> Nähere Infos gibt es in Kürze hier!</h2>
+<!-- <h2 class="text-white text-uppercase mb-0 h2-fontsize"> Hier registrieren:  </h2> -->
+<!-- <button onclick="https://t1p.de/PhysiKon2021" class="text-uppercase mb-0 h2-fontsize" > Hier anmelden!</button> -->
+
+<form action="https://t1p.de/PhysiKon2021">
+  <input type="submit" value="Anmeldung Zoom" class="text-uppercase mb-0 h2-fontsize"/>
+</form>
+
+
 <br>
+<h3 class="text-white text-uppercase mb-0 h3-fontsize"> Der Vortrag des Bundesamts für Verfassungsschutz findet über Webex statt: </h3>
+<!-- <a href="https://tu-dortmund.webex.com/tu-dortmund/j.php?MTID=m445a00c143396214aa501ed2baf31f50" class="text-white text-uppercase mb-0 h2-fontsize" > Hier anmelden!</a> -->
+<br>
+<form action="https://tu-dortmund.webex.com/tu-dortmund/j.php?MTID=m445a00c143396214aa501ed2baf31f50">
+  <input type="submit" value="Anmeldung Webex" class="text-uppercase mb-0 h2-fontsize"/>
+</form>
+
+
 <br>
   <div class="row pb-5">
     <div class="col-sm">
       <h3><i class="fas fa-location-arrow"></i> Ort</h3>
-      <p><h5>Zoom</h5></p>
+      <p><h5>Zoom & Webex</h5></p>
     </div>
     <div class="col-sm">
       <h3><i class="fas fa-calendar-alt"></i> Datum</h3>
