--- a/_includes/vortraege.html
+++ b/_includes/vortraege.html
@@ -19,10 +19,12 @@
     </tr>
     <tr>
       <td>16:00 - 17:00   </td>
+      <td>Zoom</td>
       <td>Ritzenhoefer & Company</td>
     </tr>
     <tr>
       <td>17:00 - 18:00</td>
+      <td>Webex</td>
       <td>Bundesamt für Verfassungsschutz</td>
     </tr>
     <tr>
@@ -32,11 +34,18 @@
       <td><h5>Dienstag</h5></td>
     </tr>
     <tr>
+      <td>15:00 - 16:00   </td>
+      <td>Zoom</td>
+      <td>Infineon</td>
+    </tr>
+    <tr>
       <td>16:00 - 17:00   </td>
+      <td>Zoom</td>
       <td>Brunel</td>
     </tr>
     <tr>
       <td>17:00 - 18:00</td>
+      <td>Zoom</td>
       <td>Warth & Klein Grant Thornton AG Wirtschaftsprüfungsgesellschaft</td>
     </tr>
     <tr>
@@ -47,10 +56,12 @@
     </tr>
     <tr>
       <td>16:00 - 17:00   </td>
+      <td>Zoom</td>
       <td>Cohausz & Florack</td>
     </tr>
     <tr>
       <td>17:00 - 18:00</td>
+      <td>Zoom</td>
       <td>Point8</td>
     </tr>
     <tr>
@@ -61,10 +72,12 @@
     </tr>
     <tr>
       <td>16:00 - 17:00   </td>
+      <td>Zoom</td>
       <td>EY Parthenon</td>
     </tr>
     <tr>
       <td>17:00 - 18:00</td>
+      <td>Zoom</td>
       <td>thyssenkrupp Bilstein</td>
     </tr>
     <tr>
@@ -75,11 +88,10 @@
     </tr>
     <tr>
       <td>16:00 - 17:00   </td>
+      <td>Zoom</td>
       <td>Amprion</td>
     </tr>
     <tr>
-      <td>17:00 - 18:00</td>
-      <td> </td>
     </tr>
   </table>
   </p>
