Gendern einheitlich, Links in Vortragsplan, Link Farbe weniger schlimm, ich hab keine Lust meine Diss weiterzuschreiben

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
 
     <div class="col-12 col-lg-4 mt-2">
       <p class="font-weight-light">
-        Du bist auf dem Weg Elektrotechniker/in, Informatiker/in, oder Ingenieur/in zu werden und interessierst dich für unsere Aussteller?
+        Du bist auf dem Weg Elektrotechniker:in, Informatiker:in, oder Ingenieur:in zu werden und interessierst dich für unsere Aussteller?
       </p>
     </div>
   </div>
