--- a/_includes/vortraege.html
+++ b/_includes/vortraege.html
@@ -9,7 +9,7 @@
 
 <div class="container  pt-5 ml-120 pb-5 mt-5 mt-lg-0">
 
-  <h3>Vortragsprogramm </h3>
+  <h3>Programm </h3>
 <p>  </p>
 
   <p style="font-size: 1.2rem">
@@ -19,13 +19,13 @@
     </tr>
     <tr>
       <td>16:00 - 17:00   </td>
-      <td>Zoom</td>
-      <td>Ritzenhoefer & Company</td>
+      <td><a href="https://t1p.de/PhysiKon2021">Zoom</a></td>
+      <td><a href="https://www.ritzenhoefer.com/">Ritzenhoefer & Company</a></td>
     </tr>
     <tr>
       <td>17:00 - 18:00</td>
-      <td>Webex</td>
-      <td>Bundesamt für Verfassungsschutz</td>
+      <td><a href="https://tu-dortmund.webex.com/tu-dortmund/j.php?MTID=m445a00c143396214aa501ed2baf31f50">Webex</a></td>
+      <td><a href="https://www.verfassungsschutz.de/de/karriere" >Bundesamt für Verfassungsschutz</a></td>
     </tr>
     <tr>
       <td><p></td>
@@ -35,18 +35,18 @@
     </tr>
     <tr>
       <td>15:00 - 16:00   </td>
-      <td>Zoom</td>
-      <td>Infineon</td>
+      <td><a href="https://t1p.de/PhysiKon2021">Zoom</a></td>
+      <td><a href="https://www.infineon.com/cms/de/">Infineon</a></td>
     </tr>
     <tr>
       <td>16:00 - 17:00   </td>
-      <td>Zoom</td>
-      <td>Brunel</td>
+      <td><a href="https://t1p.de/PhysiKon2021">Zoom</a></td>
+      <td><a href="https://www.brunel.de/de-de">Brunel</a></td>
     </tr>
     <tr>
       <td>17:00 - 18:00</td>
-      <td>Zoom</td>
-      <td>Warth & Klein Grant Thornton AG Wirtschaftsprüfungsgesellschaft</td>
+      <td><a href="https://t1p.de/PhysiKon2021">Zoom</a></td>
+      <td><a href="https://www.wkgt.com/">Warth & Klein Grant Thornton AG Wirtschaftsprüfungsgesellschaft</a></td>
     </tr>
     <tr>
       <td><p></td>
@@ -56,13 +56,13 @@
     </tr>
     <tr>
       <td>16:00 - 17:00   </td>
-      <td>Zoom</td>
-      <td>Cohausz & Florack</td>
+      <td><a href="https://t1p.de/PhysiKon2021">Zoom</a></td>
+      <td><a href="https://www.cohausz-florack.de">Cohausz & Florack</a></td>
     </tr>
     <tr>
       <td>17:00 - 18:00</td>
-      <td>Zoom</td>
-      <td>Point8</td>
+      <td><a href="https://t1p.de/PhysiKon2021">Zoom</a></td>
+      <td><a href="https://point-8.de/">Point8</a></td>
     </tr>
     <tr>
       <td><p></td>
@@ -72,13 +72,13 @@
     </tr>
     <tr>
       <td>16:00 - 17:00   </td>
-      <td>Zoom</td>
-      <td>EY Parthenon</td>
+      <td><a href="https://t1p.de/PhysiKon2021">Zoom</a></td>
+      <td><a href="https://www.ey-parthenon.de/">EY Parthenon</a></td>
     </tr>
     <tr>
       <td>17:00 - 18:00</td>
-      <td>Zoom</td>
-      <td>thyssenkrupp Bilstein</td>
+      <td><a href="https://t1p.de/PhysiKon2021">Zoom</a></td>
+      <td><a href="https://www.bilstein.com/de/de/">thyssenkrupp Bilstein</a></td>
     </tr>
     <tr>
       <td><p></td>
@@ -88,8 +88,8 @@
     </tr>
     <tr>
       <td>16:00 - 17:00   </td>
-      <td>Zoom</td>
-      <td>Amprion</td>
+      <td><a href="https://t1p.de/PhysiKon2021">Zoom</a></td>
+      <td><a href="https://www.amprion.net">Amprion</a></td>
     </tr>
     <tr>
     </tr>
