--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -336,7 +336,7 @@ form .row:first-child .floating-label-form-group {
 }
 
 a {
-  color: #18BC9C;
+  color: #5b8fcb;
 }
 
 a:focus, a:hover, a:active {
