--- a/_includes/information.html
+++ b/_includes/information.html
@@ -19,7 +19,7 @@
 <h3 class="text-white text-uppercase mb-0 h3-fontsize"> Der Vortrag des Bundesamts für Verfassungsschutz findet über Webex statt: </h3>
 <!-- <a href="https://tu-dortmund.webex.com/tu-dortmund/j.php?MTID=m445a00c143396214aa501ed2baf31f50" class="text-white text-uppercase mb-0 h2-fontsize" > Hier anmelden!</a> -->
 <br>
-<form action="https://tu-dortmund.webex.com/tu-dortmund/j.php?MTID=m445a00c143396214aa501ed2baf31f50">
+<form action="https://t1p.de/PhysiKon2021-BfV">
   <input type="submit" value="Anmeldung Webex" class="text-uppercase mb-0 h2-fontsize"/>
 </form>
 
