--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,7 @@
   <p class="font-weight-light mb-5" style="font-size: 1.5rem">
   Der Vortag des Bundesamts für Verfassungsschutz findet über Webex statt!
   </p>
-<form action="https://tu-dortmund.webex.com/tu-dortmund/j.php?MTID=m445a00c143396214aa501ed2baf31f50">
+<form action="https://t1p.de/PhysiKon2021-BfV">
   <input type="submit" value="Anmeldung Webex" class="text-uppercase mb-0 h3-fontsize"/>
 </form>
 
