--- a/_includes/katalog.html
+++ b/_includes/katalog.html
@@ -12,16 +12,15 @@
   Wir freuen uns auf Ihre Fragen und Anmerkungen.</p>
 </div>
 
-<!--
 <div class="container pt-5">
-  <div class="col-5">
-    <h2 class="h2-fontsize  py-5">PhysiKon 2020</h2>
-      <a href="/documents/2020_Physikon_Katalog_online.pdf">
-        <img style="size: 100%" src="documents/2020_Physikon_Katalog_online_Titel.png" alt="">
-      </a>
+  <div class="row">
+    <div class="col-5">
+      <h2 class="h2-fontsize py-5">PhysiKon 2021</h2>
+        <a href="/documents/2021_Physikon_Katalog_online.pdf">
+          <img style="size: 100%" src="documents/2021_Physikon_Katalog_online_Titel.png" alt="">
+        </a>
+    </div>
   </div>
 </div>
--->
-
 
 <hr class="star-dark">
