--- a/_includes/organisation.html
+++ b/_includes/organisation.html
@@ -10,8 +10,8 @@
 <p class="p-fontsize"> Eines der Hauptziele von PeP ist es, den Kontakt zwischen Alumni, Wirtschaft
 und Studierenden zu fördern und die PhysiKon ist die ideale Gelegenheit dazu.</p>
 
-<p class="p-fontsize"> Ansprechpartner für die PhysiKon sind Henning Moldenhauer und Lena Linhoff,
-Kontakt unter <a href="mailto:physikon@pep-dortmund.org">physikon@pep-dortmund.org</a>.</p>
+<p class="p-fontsize"> Kontakt zum Organisationsteam der PhysiKon 2022 unter
+<a href="mailto:physikon@pep-dortmund.org">physikon@pep-dortmund.org</a>.</p>
 
 <p class="p-fontsize"> Weitere Informationen zu PeP et al. findet ihr auf unserer
 <a href="https://pep-dortmund.org">Homepage</a></p>
