consistent style for gender

--- a/_includes/exhibitors.html
+++ b/_includes/exhibitors.html
@@ -1,9 +1,9 @@
 <header class="masthead bg-primary text-white text-center">
   <div class="container">
-  <h2 class="h2-fontsize  py-5">Sie suchen schlaue Köpfe und motivierte Absolvent:innen oder Studierende aus dem MINT-Bereich?</h2>
+  <h2 class="h2-fontsize  py-5">Sie suchen schlaue Köpfe und motivierte Absolvent:innen aus dem MINT-Bereich?</h2>
   <p style="font-size: 2rem">
-  Die PhysiKon 2022 bietet Ihnen die Gelegenheit, Ihr Unternehmen für Absolventen und
-  Absolventinnen aller MINT-Fakultäten der TU Dortmund attraktiv zu präsentieren.</p>
+  Die PhysiKon 2022 bietet Ihnen die Gelegenheit, Ihr Unternehmen für Absolvent:innen 
+  aller MINT-Fakultäten der TU Dortmund attraktiv zu präsentieren.</p>
 </div>
 </header>
 
