update katalog info

--- a/_includes/katalog.html
+++ b/_includes/katalog.html
@@ -1,7 +1,8 @@
 <div class="container pt-5">
-  <h2 class="h2-fontsize  py-5">Messekatalog zur PhysiKon 2021</h2>
+  <h2 class="h2-fontsize  py-5">Messekatalog zur PhysiKon 2022</h2>
   <p style="font-size: 1.2rem">
-  Hier können der Messekatalog der diesjährigen PhysiKon, sowie alle bisherigen Messekataloge vergangener Jobmessen, heruntergeladen werden.</p>
+  Hier wird in Kürze der Messekatalog zur PhyiKon 2022 
+  erscheinen. Zudem können alle bisherigen Messekataloge vergangener Jobmessen heruntergeladen werden.</p>
 </div>
 
 <div class="container pt-5">
