--- a/_includes/katalog_2020.html
+++ b/_includes/katalog_2020.html
@@ -1,7 +1,7 @@
 <div class="container pt-5">
   <div class="row">
     <div class="col-5">
-      <h2 class="h2-fontsize py-5">PhysiKon 2020</h2>
+      <h2 class="h2-fontsize py-5">PhysiKon 2020 (ausgefallen)</h2>
         <a href="/documents/2020_Physikon_Katalog_online.pdf">
           <img style="size: 100%" src="documents/2020_Physikon_Katalog_online_Titel.png" alt="">
         </a>
