exclude zoom info and grid from main page

--- a/_layouts/index_layout.html
+++ b/_layouts/index_layout.html
@@ -5,8 +5,10 @@
     {% include navbar.html %}
     {% include header.html %}
     {% include carousel.html data=site.data.unternehmen name="carousel" %}
-    <!--{% include grid.html %}-->
-    <!--{% include information.html %}-->
+    {% comment %}
+    {% include grid.html %}
+    {% include information.html %}
+    {% endcomment %}
     {% include organisation.html %}
 
     {% include scripts.html %}
