--- a/_includes/exhibitors.html
+++ b/_includes/exhibitors.html
@@ -64,8 +64,8 @@
 
   <h5>Ausstellergebühr</h5>
   <p style="font-size: 1.2rem">
-    Der Höhe des Ausstellerbeitrags für die PhysiKon 2022 beträgt 1000€.
-    Selbstverständich stellen wir Ihnen eine Rechnung über Ihren Beitrag aus.
+    Der Ausstellerbeitrag für die PhysiKon 2022 beträgt 1000€.
+    Selbstverständich stellen wir Ihnen eine Rechnung über den Beitrag aus.
     Zudem freut sich der gemeinnützige Verein PeP et al. e.V. über Spenden mit denen 
     Projekte und Stipendien für die Physikstudierende der TU Dortmund finanziert werden.
     Falls Sie sich über unsere Arbeit informieren möchten, besuchen Sie gerne 
