--- a/_includes/exhibitors.html
+++ b/_includes/exhibitors.html
@@ -15,7 +15,7 @@
   <p style="font-size: 1.2rem">
     Die PhysiKon 2022 soll nach einer reinen Online PhysiKon 2021 wieder den persönlichen 
     Kontakt zwischen Unternehmen und Studierenden im Rahmen einer Jobmesse ermöglichen. Die Messe wird 
-    am 28.04.2022 auf dem Campus ther TU Dortmund stattfinden. Bereits 2019 fand die erste PhysiKon als Präsenzmesse statt. 
+    am 28.04.2022 auf dem Campus der TU Dortmund stattfinden. Bereits 2019 fand die erste PhysiKon als Präsenzmesse statt. 
     Hier konnten sich 15 Unternehmen im Laufe eines Tages rund 400 Studierenden präsentieren.
     Dennoch hat die PhysiKon 2021 gezeigt, dass auch Online Vorträge einige Vorteile mit sich bringen: 
     Zum Beispiel können Sie ihr Unternehmen innerhalb einer Stunde einer größeren Anzahl von Studierenden vorstellen und es werden 
