change layout of katalog page

--- a/_layouts/katalog_layout.html
+++ b/_layouts/katalog_layout.html
@@ -4,7 +4,7 @@
   <body>
     {% include navbar.html %}
     {% include katalog.html %}
-    <!--{% include katalog_2021.html %}-->
+    {% include katalog_2021.html %}
     {% include katalog_2020.html %}
     {% include katalog_2019.html %}
     <!-- Scripts -->
