--- a/_includes/katalog.html
+++ b/_includes/katalog.html
@@ -13,15 +13,10 @@
   Wir freuen uns auf Ihre Fragen und Anmerkungen.</p>
 </div>
 
-<div class="container pt-5">
-  <div class="row">
-    <div class="col-5">
-      <h2 class="h2-fontsize py-5">PhysiKon 2021</h2>
-        <a href="/documents/2021_Physikon_Katalog_online.pdf">
-          <img style="size: 100%" src="documents/2021_Physikon_Katalog_online_Titel.png" alt="">
-        </a>
-    </div>
-  </div>
-</div>
 
+<div class="container pt-5">
+  <h2 class="h2-fontsize  py-5">Archiv</h2>
+</div>
 <hr class="star-dark">
+
+
