--- a/_includes/exhibitors.html
+++ b/_includes/exhibitors.html
@@ -19,9 +19,9 @@
     Hier konnten sich 15 Unternehmen im Laufe eines Tages rund 400 Studierenden präsentieren.
     Dennoch hat die PhysiKon 2021 gezeigt, dass auch Online Vorträge einige Vorteile mit sich bringen: 
     Zum Beispiel können Sie ihr Unternehmen innerhalb einer Stunde einer größeren Anzahl von Studierenden vorstellen und es werden 
-    in größerer Runde wertvolle Fragen von Studierenden mit unterscheidlichsten Interessen gestellt.
+    in größerer Runde wertvolle Fragen von Studierenden mit unterschiedlichsten Interessen gestellt.
     Daher möchten wir im Vorlauf der Jobmesse, 25.-27.04.2022, Online Vorträge 
-    via <b>Zoom</b> veranstalten, an denen Sie optional neben der Jobmesse teilnehmen können. 
+    via Zoom veranstalten, an denen Sie optional neben der Jobmesse teilnehmen können. 
     Um die technische Umsetzung kümmern wir uns, Sie müssen lediglich über einen Internet-Browser verfügen.
     Die Zeiteinteilung für die einzelnen Tage wird Anfang 2022 erfolgen, wenn alle Ausstellerplätze vergeben sind.
   </p>
