--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
 
     <div class="col-12 col-lg-4 mt-2">
       <p class="font-weight-light">
-        Oder du möchtest dich einfach mal informieren, was du mit einem Physik-Studium alles anfangen kannst?
+        Du möchtest dich einfach mal informieren, was du mit einem Physik-Studium alles anfangen kannst?
       </p>
     </div>
 
