--- a/_includes/vortraege.html
+++ b/_includes/vortraege.html
@@ -15,7 +15,7 @@
   <p style="font-size: 1.2rem">
         <table style="width:100%" >
     <tr>
-      <td><h5>Hier wird in Kürze das Programm für die PhyiKon-Woche vom 24. bis 28.04.2022 erscheinen.</h5></td>
+      <td><h5>Hier wird in Kürze das Programm für die PhysiKon-Woche vom 24. bis 28.04.2022 erscheinen.</h5></td>
     </tr>
  
 
