--- a/_includes/vortraege.html
+++ b/_includes/vortraege.html
@@ -10,11 +10,7 @@
 <div class="container  pt-5 ml-120 pb-5 mt-5 mt-lg-0">
 
   <h3>Programm </h3>
-
-
   <p style="font-size: 1.2rem">
-    <tr>
-      <td><h5>Hier wird in Kürze das Programm für die PhysiKon-Woche vom 24. bis 28.04.2022 erscheinen.</h5></td>
-    </tr>
+      <h5>Hier wird in Kürze das Programm für die PhysiKon-Woche vom 24. bis 28.04.2022 erscheinen.</h5>
   </p>
   </div>
