--- a/_includes/exhibitors.html
+++ b/_includes/exhibitors.html
@@ -69,7 +69,7 @@
     Zudem freut sich der gemeinnützige Verein PeP et al. e.V. über Spenden mit denen 
     Projekte und Stipendien für die Physikstudierende der TU Dortmund finanziert werden.
     Falls Sie sich über unsere Arbeit informieren möchten, besuchen Sie gerne 
-    die <a href="https://pep-dortmund.org/" target="_blank" rel="noopener noreferrer">Webseite von PeP et al.</a>
+    die <a href="https://pep-dortmund.org/" target="_blank" rel="noopener noreferrer">Webseite von PeP et al</a>.
 
   </div>
 
