--- a/_includes/organisation.html
+++ b/_includes/organisation.html
@@ -14,7 +14,7 @@ und Studierenden zu fördern und die PhysiKon ist die ideale Gelegenheit dazu.</
 <a href="mailto:physikon@pep-dortmund.org">physikon@pep-dortmund.org</a>.</p>
 
 <p class="p-fontsize"> Weitere Informationen zu PeP et al. findet ihr auf unserer
-<a href="https://pep-dortmund.org">Homepage</a></p>
+<a href="https://pep-dortmund.org">Homepage</a>.</p>
 
 <div align="center" class="pt-5 pb-5 mb-1">
 <img style="max-width: 300px;" class="card-img-bottom" src="img/pep.svg" alt="<unternehmen>">
