add information to exhibitors page

--- a/_includes/exhibitors.html
+++ b/_includes/exhibitors.html
@@ -18,31 +18,39 @@
     am 28.04.2022 auf dem Campus der TU Dortmund stattfinden. Bereits 2019 fand die erste PhysiKon als Präsenzmesse statt. 
     Hier konnten sich 15 Unternehmen im Laufe eines Tages rund 400 Studierenden präsentieren.
     Dennoch hat die PhysiKon 2021 gezeigt, dass auch Online Vorträge einige Vorteile mit sich bringen: 
-    Zum Beispiel können Sie ihr Unternehmen innerhalb einer Stunde einer größeren Anzahl von Studierenden vorstellen und es werden 
+    Zum Beispiel können Sie ihr Unternehmen innerhalb einer Stunde einer größeren Anzahl von Studierenden 
+    vorstellen und es werden 
     in größerer Runde wertvolle Fragen von Studierenden mit unterschiedlichsten Interessen gestellt.
     Daher möchten wir im Vorlauf der Jobmesse, 25.-27.04.2022, Online Vorträge 
-    via Zoom veranstalten, an denen Sie optional neben der Jobmesse teilnehmen können. 
-    Um die technische Umsetzung kümmern wir uns, Sie müssen lediglich über einen Internet-Browser verfügen.
-    Die Zeiteinteilung für die einzelnen Tage wird Anfang 2022 erfolgen, wenn alle Ausstellerplätze vergeben sind.
+    via Zoom veranstalten, an denen Sie neben der Jobmesse teilnehmen können. 
+    
   </p>
 
   <h5>Jobmesse</h5>
   <p style="font-size: 1.2rem">
     Auf unserer Jobmesse haben Sie die Möglichkeit an Ihrem Messestand mit Studierenden in Kontakt zu treten.
-    Die Messe wird am 28.04.2022 auf dem Campus der TU Dortmund stattfinden.  
-    Genaue Informationen zur Größe des Standes erhalten Sie sobald alle Ausstellerplätze vergeben sind.
+    Die Messe soll am 28.04.2022 auf dem Campus der TU Dortmund stattfinden. Natürlich können wir den 
+    Stand der Coronapandemie im April 2022 nicht voraussehen.  
+    Über die genauen Zugangsvoraussetzungen für Aussteller und 
+    Besucher sowie das Hygienekonzept werden wir so früh wie möglich informieren. 
+    Das geplante hybride Format aus Online Vorträgen und Präsenzmesse 
+    bietet uns und Ihnen die Planungssicherheit, dass zumindest ein Teil 
+    der PhysiKon unabhängig von der pandemischen Lage stattfinden wird. 
   </p>
 
 
   <h5>Online Vortrag</h5>
   <p style="font-size: 1.2rem">
     Jedes Unternehmen hat eine Stunde Zeit sich den interessierten Studierenden vorzustellen.
-    Diese Stunde kann relativ frei gestaltet werden.
+    Diese Stunde kann relativ frei gestaltet werden. 
     Wir stellen uns einen einleitenden Vortrag vor, der über Ihr Unternehmen und den klassischen Aufgabenbereich für 
     MINT-Fachkräfte erzählt.
-    Es sollte ausreichend Zeit für Fragen eingeplant werden, da wir den Teilnehmenden die Möglichkeit geben möchten, mit Ihnen ins 
+    Es sollte ausreichend Zeit für Fragen eingeplant werden, da wir den Teilnehmenden die Möglichkeit geben 
+    möchten, mit Ihnen ins 
     Gespräch zu kommen.
     Zoom verfügt über eine Breakout-Room-Funktion, die Gespräche in kleineren Gruppen ermöglicht und gerne genutzt werden kann.
+    Um die technische Umsetzung der Zoom-Konferenz kümmern wir uns, Sie müssen lediglich über einen Internet-Browser verfügen.
+    Die Zeiteinteilung für die einzelnen Tage wird Anfang 2022 erfolgen, wenn alle Ausstellerplätze vergeben sind.
   </p>
 
   <h5>Messekatalog</h5>
@@ -64,13 +72,19 @@
 
   <h5>Ausstellergebühr</h5>
   <p style="font-size: 1.2rem">
-    Der Ausstellerbeitrag für die PhysiKon 2022 beträgt 1000€.
-    Selbstverständich stellen wir Ihnen eine Rechnung über den Beitrag aus.
-    Zudem freut sich der gemeinnützige Verein PeP et al. e.V. über Spenden mit denen 
+    Die Ausstellergebühr für die Präsenzmesse am 28.04.2022 beträgt 1000€. Zudem haben Sie als Teilnehemer der Messe 
+    die Möglichkeit einen Online Vortrag ohne weitere Beiträge zu halten. 
+    Möchten Sie lediglich an dem Online Programm teilnehmen, beträgt 
+    die Gebühr 750€. 
+    Selbstverständich stellen wir Ihnen eine Rechnung über Ihren Beitrag aus.
+    Bitte beachten Sie die Absagefrist von 2 Wochen für die Präsenzmesse und 8 Wochen für den Online Vortrag. 
+  
+
+  <p style="font-size: 1.2rem">
+    Der gemeinnützige Verein PeP et al. e.V. freut sich über Spenden mit denen 
     Projekte und Stipendien für die Physikstudierende der TU Dortmund finanziert werden.
     Falls Sie sich über unsere Arbeit informieren möchten, besuchen Sie gerne 
     die <a href="https://pep-dortmund.org/" target="_blank" rel="noopener noreferrer">Webseite von PeP et al</a>.
-
   </div>
 
   <div class="container pt-5">
