--- a/_includes/exhibitors.html
+++ b/_includes/exhibitors.html
@@ -31,8 +31,8 @@
     Auf unserer Jobmesse haben Sie die Möglichkeit an Ihrem Messestand mit Studierenden in Kontakt zu treten.
     Die Messe soll am 28.04.2022 auf dem Campus der TU Dortmund stattfinden. Natürlich können wir den 
     Stand der Coronapandemie im April 2022 nicht voraussehen.  
-    Über die genauen Zugangsvoraussetzungen für Aussteller und 
-    Besucher sowie das Hygienekonzept werden wir so früh wie möglich informieren. 
+    Über die genauen Zugangsvoraussetzungen für Teilnehmende 
+    sowie das Hygienekonzept werden wir so früh wie möglich informieren. 
     Das geplante hybride Format aus Online Vorträgen und Präsenzmesse 
     bietet uns und Ihnen die Planungssicherheit, dass zumindest ein Teil 
     der PhysiKon unabhängig von der pandemischen Lage stattfinden wird. 
@@ -72,7 +72,7 @@
 
   <h5>Ausstellergebühr</h5>
   <p style="font-size: 1.2rem">
-    Die Ausstellergebühr für die Präsenzmesse am 28.04.2022 beträgt 1000€. Zudem haben Sie als Teilnehemer der Messe 
+    Die Ausstellergebühr für die Präsenzmesse am 28.04.2022 beträgt 1000€. Zudem haben Sie als ausstellendes Unternehmen 
     die Möglichkeit einen Online Vortrag ohne weitere Beiträge zu halten. 
     Möchten Sie lediglich an dem Online Programm teilnehmen, beträgt 
     die Gebühr 750€. 
@@ -82,7 +82,7 @@
 
   <p style="font-size: 1.2rem">
     Der gemeinnützige Verein PeP et al. e.V. freut sich über Spenden mit denen 
-    Projekte und Stipendien für die Physikstudierende der TU Dortmund finanziert werden.
+    Projekte und Stipendien für die Physikstudierenden der TU Dortmund finanziert werden.
     Falls Sie sich über unsere Arbeit informieren möchten, besuchen Sie gerne 
     die <a href="https://pep-dortmund.org/" target="_blank" rel="noopener noreferrer">Webseite von PeP et al</a>.
   </div>
