small typos and section Fristen

--- a/_includes/exhibitors.html
+++ b/_includes/exhibitors.html
@@ -13,29 +13,23 @@
 
   <h5>Format und Termin</h5>
   <p style="font-size: 1.2rem">
-    Die PhysiKon 2022 soll nach einer reinen Online PhysiKon 2021 wieder den persönlichen 
-    Kontakt zwischen Unternehmen und Studierenden im Rahmen einer Jobmesse ermöglichen. Die Messe wird 
-    am 28.04.2022 auf dem Campus der TU Dortmund stattfinden. Bereits 2019 fand die erste PhysiKon als Präsenzmesse statt. 
+    Die PhysiKon 2022 soll nach einer reinen Online-PhysiKon 2021 wieder den persönlichen Kontakt zwischen Unternehmen und Studierenden im Rahmen einer Jobmesse ermöglichen.
+    Die Messe wird am 28.04.2022 auf dem Campus der TU Dortmund stattfinden.
+    Bereits 2019 fand die erste PhysiKon als Präsenzmesse statt.
     Hier konnten sich 15 Unternehmen im Laufe eines Tages rund 400 Studierenden präsentieren.
-    Dennoch hat die PhysiKon 2021 gezeigt, dass auch Online Vorträge einige Vorteile mit sich bringen: 
-    Zum Beispiel können Sie ihr Unternehmen innerhalb einer Stunde einer größeren Anzahl von Studierenden 
-    vorstellen und es werden 
-    in größerer Runde wertvolle Fragen von Studierenden mit unterschiedlichsten Interessen gestellt.
-    Daher möchten wir im Vorlauf der Jobmesse, 25.-27.04.2022, Online Vorträge 
-    via Zoom veranstalten, an denen Sie neben der Jobmesse teilnehmen können. 
+    Dennoch hat die PhysiKon 2021 gezeigt, dass auch Online-Vorträge einige Vorteile mit sich bringen: 
+    Zum Beispiel können Sie Ihr Unternehmen innerhalb einer Stunde einer größeren Anzahl von Studierenden vorstellen und es werden in größerer Runde wertvolle Fragen von Studierenden mit unterschiedlichsten Interessen gestellt.
+    Daher möchten wir im Vorlauf der Jobmesse, 25.-27.04.2022, Online-Vorträge via Zoom veranstalten, an denen Sie neben der Jobmesse teilnehmen können. 
     
   </p>
 
   <h5>Jobmesse</h5>
   <p style="font-size: 1.2rem">
     Auf unserer Jobmesse haben Sie die Möglichkeit an Ihrem Messestand mit Studierenden in Kontakt zu treten.
-    Die Messe soll am 28.04.2022 auf dem Campus der TU Dortmund stattfinden. Natürlich können wir den 
-    Stand der Coronapandemie im April 2022 nicht voraussehen.  
-    Über die genauen Zugangsvoraussetzungen für Teilnehmende 
-    sowie das Hygienekonzept werden wir so früh wie möglich informieren. 
-    Das geplante hybride Format aus Online Vorträgen und Präsenzmesse 
-    bietet uns und Ihnen die Planungssicherheit, dass zumindest ein Teil 
-    der PhysiKon unabhängig von der pandemischen Lage stattfinden wird. 
+    Die Messe soll am 28.04.2022 auf dem Campus der TU Dortmund stattfinden.
+    Natürlich können wir den Stand der Coronapandemie im April 2022 nicht voraussehen.
+    Über die genauen Zugangsvoraussetzungen für Teilnehmende sowie das Hygienekonzept werden wir so früh wie möglich informieren. 
+    Das hybride Format aus Online-Vorträgen und Präsenzmesse bietet Ihnen und uns die Planungssicherheit, dass zumindest ein Teil der PhysiKon unabhängig von der pandemischen Lage stattfinden wird.
   </p>
 
 
@@ -43,42 +37,44 @@
   <p style="font-size: 1.2rem">
     Jedes Unternehmen hat eine Stunde Zeit sich den interessierten Studierenden vorzustellen.
     Diese Stunde kann relativ frei gestaltet werden. 
-    Wir stellen uns einen einleitenden Vortrag vor, der über Ihr Unternehmen und den klassischen Aufgabenbereich für 
-    MINT-Fachkräfte erzählt.
-    Es sollte ausreichend Zeit für Fragen eingeplant werden, da wir den Teilnehmenden die Möglichkeit geben 
-    möchten, mit Ihnen ins 
-    Gespräch zu kommen.
+    Wir stellen uns einen einleitenden Vortrag vor, der über Ihr Unternehmen und den klassischen Aufgabenbereich für MINT-Fachkräfte erzählt.
+    Es sollte ausreichend Zeit für Fragen eingeplant werden, da wir den Teilnehmenden die Möglichkeit geben möchten, mit Ihnen ins Gespräch zu kommen.
     Zoom verfügt über eine Breakout-Room-Funktion, die Gespräche in kleineren Gruppen ermöglicht und gerne genutzt werden kann.
     Um die technische Umsetzung der Zoom-Konferenz kümmern wir uns, Sie müssen lediglich über einen Internet-Browser verfügen.
     Die Zeiteinteilung für die einzelnen Tage wird Anfang 2022 erfolgen, wenn alle Ausstellerplätze vergeben sind.
+    Falls es in Ihrem Unternehmen aus irgendwelchen Gründen nicht möglich ist, Zoom zu verwenden, können wir Webex als Alternative anbieten.
   </p>
 
   <h5>Messekatalog</h5>
   <p style="font-size: 1.2rem">
-    Zur PhysiKon wird ein Messekatalog erscheinen, der kostenlos online zur Verfügung gestellt wird. Im Katalog können Sie Ihr Unternehmen auf
-    einer Seite vorstellen und Ihre Kontaktinformationen angeben. Der Katalog wird während und nach der Veranstaltung auf 
-    unserer Webseite zur Verfügung stehen.
+    Zur PhysiKon wird ein Messekatalog erscheinen, der kostenlos online zur Verfügung gestellt wird.
+    Im Katalog können Sie Ihr Unternehmen auf einer Doppelseite vorstellen und Ihre Kontaktinformationen angeben.
+    Der Katalog wird während und nach der Veranstaltung auf unserer Webseite zur Verfügung stehen.
   </p>
 
 
   <h5>Stellenmarkt</h5>
   <p style="font-size: 1.2rem">
-    In Kooperation mit der <b>Jobbörse</b> von PeP et al. bieten wir einen Stellenmarkt an, auf dem Sie gerne aktuelle offene Stellen, 
-    Praktika oder Traineeprogramme
-    veröffentlichen können. Bitte senden Sie dazu Ihre Anzeigen an <a href="mailto:jobboerse@pep-dortmund.org">physikon@pep-dortmund.org</a>.
+    In Kooperation mit der <b>Jobbörse</b> von PeP et al. bieten wir einen Stellenmarkt an, auf dem Sie gerne aktuelle offene Stellen, Praktika oder Traineeprogramme veröffentlichen können.
+    Bitte senden Sie dazu Ihre Anzeigen an <a href="mailto:jobboerse@pep-dortmund.org">physikon@pep-dortmund.org</a>.
     Die Jobbörse ist auch vor und nach der PhysiKon 2022 erreichbar.
   </p>
 
 
   <h5>Ausstellergebühr</h5>
   <p style="font-size: 1.2rem">
-    Die Ausstellergebühr für die Präsenzmesse am 28.04.2022 beträgt 1000€. Zudem haben Sie als ausstellendes Unternehmen 
-    die Möglichkeit einen Online Vortrag ohne weitere Beiträge zu halten. 
-    Möchten Sie lediglich an dem Online Programm teilnehmen, beträgt 
-    die Gebühr 750€. 
+    Die Ausstellergebühr für die Präsenzmesse am 28.04.2022 beträgt 1000€.
+    Zudem haben Sie als ausstellendes Unternehmen die Möglichkeit einen Online Vortrag ohne zusätzliche Gebühren zu halten.
+    Möchten Sie lediglich an dem Online-Programm teilnehmen, beträgt die Gebühr 750€.
     Selbstverständich stellen wir Ihnen eine Rechnung über Ihren Beitrag aus.
-    Bitte beachten Sie die Absagefrist von 2 Wochen für die Präsenzmesse und 8 Wochen für den Online Vortrag. 
-  
+
+  <h5>Fristen</h5>
+  <p style="font-size: 1.2rem">
+    Da sich die pandemische Lage sehr dynamisch entwickelt, können Sie Ihren Ausstellerplatz für die Präsenzmesse bis zum 14.04.2022 (2 Wochen vorher) absagen.
+    Falls Sie den Online-Vortrag nicht wahrnehmen können, bitten wir bis zum 03.03.2022 (8 Wochen vorher) um Absage.
+    Die Ausstellergebühren erhalten Sie bei einer fristgerechten Absage zurück.
+    Sollte die Präsenzmesse nicht stattfinden können, berechnen wir nur die Gebühren für den Online-Vortrag (750€).
+  </p>
 
   <p style="font-size: 1.2rem">
     Der gemeinnützige Verein PeP et al. e.V. freut sich über Spenden mit denen 
