--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -17,9 +17,11 @@
          <ul class="navbar-nav ml-auto">
            <li class="nav-item mx-1 mx-lg-1">
              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://pep-dortmund.org/jobboerse/" target="_blank" rel="noopener noreferrer">Jobbörse</a>
-           <li class="nav-item mx-1 mx-lg-1">
-             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="katalog.html">Katalog und Archiv</a>
-             <li class="nav-item mx-1 mx-lg-1">
+           <li class="nav-item mx-1 mx-lg-3">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="online_katalog.html">Online Katalog 2022</a>
+            <li class="nav-item mx-1 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="katalog.html">Archiv</a>
+            <li class="nav-item mx-1 mx-lg-1">
                 <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="vortraege.html">Programm</a>
             <li class="nav-item mx-1 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="exhibitors.html">Für Unternehmen</a>
