--- a/css/custom.css
+++ b/css/custom.css
@@ -275,3 +275,19 @@ a {
   max-width: 100%;
   max-height: 100%;
 }
+
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
