--- a/_includes/content_exhibitors.html
+++ b/_includes/content_exhibitors.html
@@ -1,7 +1,21 @@
-<div class="container pt-5">
-<h2>Unternehmen PhysiKon 2022</h2>
+<div class="container-grid">
 
-<div class="row">
+
+<!-- <h2>Unternehmen PhysiKon 2022</h2> -->
+<div class="cat-logo">
+  
+</div>
+<div class="cat-text">
+  Text
+</div>
+<div class="cat-image">
+  Bild
+</div>
+<div class="cat-contact">
+  Kontakt
+</div>
+
+<!-- <div class="row">
   <div class="column" >
     <iframe src="img/logos/cryoelectra.pdf" ></iframe>
     <p>Some text..</p>
@@ -10,7 +24,7 @@
     <h2>Column 2</h2>
     <p>Some text..</p>
   </div>
-</div>
+</div> -->
 </div>
 
 
