--- a/_layouts/online_katalog_layout.html
+++ b/_layouts/online_katalog_layout.html
@@ -3,7 +3,7 @@
   {% include head.html %}
   <body>
     {% include navbar.html %}
-    {% include content_exhibitors.html %}
+    {% include carousel_catalog.html %}
 
     <!-- Scripts -->
     {% include scripts.html %}
