--- a/css/custom.css
+++ b/css/custom.css
@@ -300,44 +300,96 @@ a {
   margin-left: auto;
   display: grid;
 
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1.2fr 2fr;
+  grid-template-rows: 0.3fr 0.3fr 0.3fr 0.2fr 0.3fr 0.5fr;
+  grid-template-areas: 
+    "logo ad"
+    "contact ad"
+    "branche ad"
+    "number ad"
+    "location ad"
+    "qualification text_ad";
 
   gap: 10px;
   padding: 10px;
   box-sizing: border-box;
+  font-size: medium;
+  /* border: 1px solid #5b8fcb; */
+ 
 
 }
 
 .container-grid div {
-  padding: 10px;
-  border: 1px solid #5b8fcb;
+  padding: 15px;
+  /* border: 1px solid #5b8fcb; */
+  text-align: left;
 }
 
 .cat-logo {
-  grid-row-start: 1;
-  grid-row-end: 2;
-  grid-column-start: 1;
-  grid-column-end: 2;
+  grid-area: logo;
 }
 
 .cat-text {
-  grid-row-start: 1;
-  grid-row-end: 3;
-  grid-column-start: 2;
-  grid-column-end: 3;
+  grid-area: text_ad;
+  padding: 10px;
+  font-size: large;
+
 }
 
 .cat-image {
-  grid-row-start: 1;
-  grid-row-end: 3;
-  grid-column-start: 3;
-  grid-column-end: 4;
+  grid-area: ad;
 }
 
 .cat-contact {
-  grid-row-start: 2;
-  grid-row-end: 3;
-  grid-column-start: 1;
-  grid-column-end: 2;
+  /* background-color: #7C7C7C; */
+  grid-area: contact;
+  background-color: #d1d1d1;
+}
+
+.cat-branche {
+  grid-area: branche;
+  background-color: #d1d1d1;
+}
+
+.cat-employers {
+  grid-area: number;
+  background-color: #d1d1d1;
+}
+
+.cat-location {
+  grid-area: location;
+  background-color: #d1d1d1;
+}
+
+.cat-qualifications {
+  grid-area: qualification;
+  background-color: #d1d1d1;
+}
+
+@media only screen and (max-width:700px) {
+  .container-grid{
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.2fr 1fr 1fr 0.2fr 0.2fr 0.2fr 0.2fr 0.3fr;
+    grid-template-areas: 
+      "logo"
+      "ad"
+      "text_ad"
+      "location"
+      "number"
+      "branche"
+      "qualification"
+      "contact"
+  }
+}
+
+ul.a {
+  list-style-type: circle;
+}
+
+
+
+.helper {
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
 }
