--- a/_layouts/index_layout.html
+++ b/_layouts/index_layout.html
@@ -5,6 +5,7 @@
     {% include navbar.html %}
     {% include header.html %}
     {% include grid.html %}
+    {% include carousel.html %}
     {% comment %}
     {% include information.html %}
     {% endcomment %}
