--- a/css/custom.css
+++ b/css/custom.css
@@ -292,7 +292,7 @@ a {
   clear: both;
 }
 
-.container-grid {
+/* .container-grid {
   width: 75%;
   height: 100%;
 
@@ -392,4 +392,4 @@ ul.a {
   display: inline-block;
   height: 100%;
   vertical-align: middle;
-}
+} */
