--- a/_layouts/online_katalog_layout.html
+++ b/_layouts/online_katalog_layout.html
@@ -3,7 +3,8 @@
   {% include head.html %}
   <body>
     {% include navbar.html %}
-    {% include carousel_catalog.html %}
+    <!-- {% include carousel_catalog.html data=site.data.catalog name="online_catalogue" %} -->
+    {% include test_slider.html %}
 
     <!-- Scripts -->
     {% include scripts.html %}
