--- a/css/custom.css
+++ b/css/custom.css
@@ -102,7 +102,7 @@ a {
 }
 
 /* Carousel new classes*/
-.carousel-img-new {
+/* .carousel-img-new {
   position: absolute;
 	margin: auto;
   top: 0;
@@ -111,10 +111,10 @@ a {
   bottom: 0;
   max-width: 100%;
   max-height: 100%;
-}
+} */
 
 /* Add top: 150px */
-.carousel-caption-new {
+/* .carousel-caption-new {
 	padding-top: 1rem;
 	color: var(--pep-gray);
 }
@@ -150,7 +150,7 @@ a {
 .carousel-control-prev-icon {
   color: var(--pep-gray);
   font-size: 2rem;
-}
+} */
 
 /* Navbar */
 .navbar-brand-new:not(.nohover) {
@@ -292,7 +292,7 @@ a {
   clear: both;
 }
 
-/* .container-grid {
+ .container-grid {
   width: 75%;
   height: 100%;
 
