carousel kind of working

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5810,7 +5810,7 @@ button.close {
   color: #212529;
 }
 
-/* .carousel {
+ .carousel {
   position: relative;
 }
 
@@ -5831,8 +5831,8 @@ button.close {
   backface-visibility: hidden;
   -webkit-perspective: 1000px;
   perspective: 1000px;
-} */
-/* 
+}
+
 .carousel-item.active,
 .carousel-item-next,
 .carousel-item-prev {
@@ -5840,9 +5840,9 @@ button.close {
   transition: -webkit-transform 0.6s ease;
   transition: transform 0.6s ease;
   transition: transform 0.6s ease, -webkit-transform 0.6s ease;
-} */
+}
 
-/* @media screen and (prefers-reduced-motion: reduce) {
+@media screen and (prefers-reduced-motion: reduce) {
   .carousel-item.active,
   .carousel-item-next,
   .carousel-item-prev {
@@ -5896,14 +5896,14 @@ button.close {
     -webkit-transform: translate3d(-100%, 0, 0);
     transform: translate3d(-100%, 0, 0);
   }
-} */
+}
 
-/* .carousel-fade .carousel-item {
+.carousel-fade .carousel-item {
   opacity: 0;
   transition-duration: .6s;
   transition-property: opacity;
-} */
-/* 
+}
+
 .carousel-fade .carousel-item.active,
 .carousel-fade .carousel-item-next.carousel-item-left,
 .carousel-fade .carousel-item-prev.carousel-item-right {
@@ -5933,9 +5933,9 @@ button.close {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
-} */
+}
 
-/* .carousel-control-prev,
+.carousel-control-prev,
 .carousel-control-next {
   position: absolute;
   top: 0;
@@ -5946,8 +5946,8 @@ button.close {
   align-items: center;
   -ms-flex-pack: center;
   justify-content: center;
-  width: 15%;
-  color: #fff;
+  width: 55%;
+  color: rgb(226, 36, 36);
   text-align: center;
   opacity: 0.5;
 }
@@ -5955,7 +5955,7 @@ button.close {
 .carousel-control-prev:hover, .carousel-control-prev:focus,
 .carousel-control-next:hover,
 .carousel-control-next:focus {
-  color: #fff;
+  color: rgb(255, 255, 255);
   text-decoration: none;
   outline: 0;
   opacity: .9;
@@ -5967,14 +5967,14 @@ button.close {
 
 .carousel-control-next {
   right: 0;
-} */
+}
 
-/* .carousel-control-prev-icon,
+.carousel-control-prev-icon,
 .carousel-control-next-icon {
   display: inline-block;
   width: 20px;
   height: 20px;
-  background: transparent no-repeat center center;
+  /* background: transparent no-repeat center center; */
   background-size: 100% 100%;
 }
 
@@ -5984,11 +5984,11 @@ button.close {
 
 .carousel-control-next-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23ff0000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
-} */
+}
 
 
 
-/* .carousel-indicators {
+.carousel-indicators {
   position: absolute;
   right: 0;
   bottom: 10px;
@@ -6002,9 +6002,9 @@ button.close {
   margin-right: 15%;
   margin-left: 15%;
   list-style: none;
-} */
+}
 
-/* .carousel-indicators li {
+.carousel-indicators li {
   position: relative;
   -ms-flex: 0 1 auto;
   flex: 0 1 auto;
@@ -6015,9 +6015,9 @@ button.close {
   text-indent: -999px;
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0.5);
-} */
+}
 
-/* .carousel-indicators li::before {
+.carousel-indicators li::before {
   position: absolute;
   top: 100px;
   left: 0;
@@ -6025,9 +6025,9 @@ button.close {
   width: 100%;
   height: 400px;
   content: "";
-} */
+}
 
-/* .carousel-indicators li::after {
+.carousel-indicators li::after {
   position: absolute;
   bottom: 100px;
   left: 0;
@@ -6035,13 +6035,13 @@ button.close {
   width: 100%;
   height: 400px;
   content: "";
-} */
+}
 
-/* .carousel-indicators .active {
+.carousel-indicators .active {
   background-color: #fff;
-} */
+}
 
-/* .carousel-caption {
+.carousel-caption {
   position: absolute;
   right: 15%;
   bottom: 20px;
@@ -6051,7 +6051,7 @@ button.close {
   padding-bottom: 20px;
   color: #fff;
   text-align: center;
-} */
+}
 
 .align-baseline {
   vertical-align: baseline !important;
