--- a/_includes/carousel_catalog.html
+++ b/_includes/carousel_catalog.html
@@ -2,15 +2,15 @@
 <section class="container text-center">
 
     <!-- Carousel Header -->
-    <h2 class="text-center text-gray text-uppercase text-secondary mb-0 h2-fontsize">Unternehmen 20222</h2>
+    <h2 class="text-center text-gray text-uppercase text-secondary mb-0 h2-fontsize">Unternehmen 2022</h2>
     <hr class="star-dark">
     
     <!-- Carousel -->
-    <div id="{{ include.name }}" class="carousel" >
+    <div id="{{ include.name }}" class="carousel slide" data-ride="carousel" data-interval="false" >
       <div class="carousel-inner">
     
         {% for unternehmen in site.data.catalog %}
-        <div class="carousel-item">
+        <div class="carousel-item {% if forloop.first == true %}active{% endif %}">
             <div class="container-grid">
 
 
@@ -31,7 +31,7 @@
                   </p>
                   </div>
                   <div class="cat-image">
-                    <span class="helper"></span><img src={{unternehmen.ad}} alt="" style="width:100%;">
+                    <img src={{unternehmen.ad}} alt="" style="width:80%;">
                   </div>
                   <div class="cat-branche">
                     <h6> Branche </h6>
@@ -50,12 +50,6 @@
                     <ul class="a">
                         {% for quali in unternehmen.qualifications %}
                         <li> {{quali}} </li>
-                  <!-- <li> Persönlichkeiten, die gerne Neues entdecken und die Zukunft gestalten wollen.</li>
-                    <li>Erste praktische Erfahrung durch relevante Praktika oder eine Berufsausbildung.</li>
-                    <li>Du bist neugierig, zuverlässig und teamorientiert.</li>
-                    <li>Du hast Spaß daran, gemeinsam Gewohntes infrage zu stellen.</li>
-                  <li>Englisch, idealerweise Deutsch und die jeweilige Landessprache sprichst du fließend.</li> -->
-                    
                   {% endfor %}
                     </ul>
                   </div>
@@ -63,7 +57,7 @@
         </div>
         {% endfor %}
     
-        <!-- <ol class="carousel-indicators">
+        <ol class="carousel-indicators">
           {% for catalog in include.data %}
           <li
             data-target="#{{ include.name }}"
@@ -71,7 +65,7 @@
             class="{% if forloop.first == true %}active{% endif %}">
           </li>
           {% endfor %}
-        </ol> -->
+        </ol>
       </div>
     
       <a class="carousel-control-prev" href="#{{ include.name }}" role="button" data-slide="prev">
