--- a/_layouts/online_katalog_layout.html
+++ b/_layouts/online_katalog_layout.html
@@ -3,9 +3,12 @@
   {% include head.html %}
   <body>
     {% include navbar.html %}
-    <!-- {% include carousel_catalog.html data=site.data.catalog name="online_catalogue" %} -->
+    
+    {% include carousel_catalog.html data=site.data.catalog name="online_catalogue" %} 
+    {% comment %} 
+    
     {% include test_slider.html %}
-
+    {% endcomment%}
     <!-- Scripts -->
     {% include scripts.html %}
   </body>
