--- a/css/custom.css
+++ b/css/custom.css
@@ -102,7 +102,7 @@ a {
 }
 
 /* Carousel new classes*/
-/* .carousel-img-new {
+.carousel-img-new {
   position: absolute;
 	margin: auto;
   top: 0;
@@ -111,16 +111,16 @@ a {
   bottom: 0;
   max-width: 100%;
   max-height: 100%;
-} */
+}
 
 /* Add top: 150px */
-/* .carousel-caption-new {
+.carousel-caption-new {
 	padding-top: 1rem;
 	color: var(--pep-gray);
 }
 
 .carousel-inner {
-  max-width: 90%;
+  max-width: 100%;
   position: relative;
   margin-left: auto;
   margin-right: auto;
@@ -143,14 +143,15 @@ a {
 
 .carousel-control-next,
 .carousel-control-prev {
-  width: 5%;
+  width: 0%;
+  margin-left: -90px;
 }
 
 .carousel-control-next-icon,
 .carousel-control-prev-icon {
   color: var(--pep-gray);
-  font-size: 2rem;
-} */
+  font-size: 4rem;
+}
 
 /* Navbar */
 .navbar-brand-new:not(.nohover) {
@@ -293,7 +294,7 @@ a {
 }
 
  .container-grid {
-  width: 75%;
+  width: 100%;
   height: 100%;
 
   margin-right: auto;
@@ -301,9 +302,9 @@ a {
   display: grid;
 
   grid-template-columns: 1.2fr 2fr;
-  grid-template-rows: 0.3fr 0.3fr 0.3fr 0.2fr 0.3fr 0.5fr;
+  grid-template-rows: 0.3fr 0.3fr 0.2fr 0.2fr 0.3fr 0.5fr;
   grid-template-areas: 
-    "logo ad"
+    "logo none"
     "contact ad"
     "branche ad"
     "number ad"
@@ -338,6 +339,8 @@ a {
 
 .cat-image {
   grid-area: ad;
+  padding: 0px;
+  margin-left: 20px;
 }
 
 .cat-contact {
@@ -392,4 +395,4 @@ ul.a {
   display: inline-block;
   height: 100%;
   vertical-align: middle;
-} */
+} 
