--- a/css/custom.css
+++ b/css/custom.css
@@ -275,3 +275,35 @@ a {
   max-width: 100%;
   max-height: 100%;
 }
+
+.styled-table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  margin-left:auto; 
+  margin-right:auto;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+.styled-table thead tr {
+  background-color: #5b8fcb;
+  color: #ffffff;
+  text-align: left;
+}
+
+.styled-table th,
+.styled-table td {
+padding: 12px 15px;    
+}
+
+.styled-table tbody tr {
+border-bottom: thin solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+border-bottom: 2px solid #5b8fcb;
+}
+
