--- a/_includes/vortraege.html
+++ b/_includes/vortraege.html
@@ -1,6 +1,6 @@
 <header class="masthead bg-primary text-white text-center">
   <div class="container">
-  <h2 class="h2-fontsize  py-5">Was machen Physiker:innen nach dem Studium?</h2>
+  <h2 class="h2-fontsize  py-5">Was machen MINT-Studierende nach dem Studium?</h2>
   <p style="font-size: 2rem">
   Unsere Aussteller haben eine Antwort auf diese Frage!
   </p>
@@ -11,6 +11,61 @@
 
   <h3>Programm </h3>
   <p style="font-size: 1.2rem">
-      <h5>Hier wird in Kürze das Programm für die PhysiKon-Woche vom 25. bis 28.04.2022 erscheinen.</h5>
+      <h5>
+        Zusätzlich zu der Jobmesse am 28.04.22 auf dem Campus der TU Dortmund, 
+        bieten 
+        wir ein breites Online Angebot an. Hier haben Unternehmen 
+        eine Stunde Zeit sich euch im Rahmen eines Vortrags via Zoom 
+        vorzustellen und ihr könnt Fragen stellen.
+        Der Zeitplan für das Onlineangebot:
+      
+<table class="styled-table">
+  
+  <thead>
+  <tr>
+    <th>Zeit</th>
+    <th>25.04.22</th>
+    <th>26.04.22</th>
+    <th>27.04.22</th>
+  </tr>
+  </thead>
+  <tr>
+    <td>13-14Uhr</td>
+    <td></td>
+    <td></td>
+    <td>Schulministerium NRW</td>
+  </tr>
+  <tr>
+    <td>14-15Uhr</td>
+    <td>CGI</td>
+    <td>Point 8</td>
+    <td>Deichmann</td>
+  </tr>
+  <tr>
+    <td>15-16Uhr</td>
+    <td>RTL</td>
+    <td>Ritzenhoefer & Company</td>
+    <td>Forschungszentrum Jülich</td>
+  </tr>
+  <tr>
+    <td>16-17Uhr</td>
+    <td>Amprion</td>
+    <td>Infineon</td>
+    <td>NRW.BANK</td>
+  </tr>
+  <tr>
+    <td>17-18Uhr</td>
+    <td>Elmos</td>
+    <td>zeb</td>
+    <td>TNG Consulting</td>
+  </tr>
+</table>
+
+
+
+
+
+
+
   </p>
   </div>
