add time range of zoom talks to main page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,9 @@
 
 <div class="jumbotron jumbotron-fluid physikon-jumbotron px-3 text-white text-center">
   <img class="header-logo" src="img/logos-physikon/logo-pfeil-gruen.svg" alt="PhysiKon">
-  <h2 class="gray">25. - 27.04.22 Online-Vorträge <br> 28.04.22 Jobmesse <br> 
+  <h2 class="gray">25. - 27.04.22 Online-Vorträge <br> 
+    <A href="vortraege.html">13-18Uhr, Zoom</A>  <br><br> 
+    28.04.22 Jobmesse <br> 
   10-16Uhr, Emil-Figge-Str. 50, TU Dortmund</h2>
 </div>
 
